# GICR

./: .gitignore  Makefile.am  README.md  configure.in  gicr.pc.in
src/: AccessControlEntry.vala  AccessControlList.vala  AccessControlManager.vala  AccessControlPolicy.vala  ContentHandler.vala  Credentials.vala  Errordomains.vala  Event.vala  EventJournal.vala  EventListener.vala  GuestCredentials.vala  Hold.vala  Item.vala  ItemDefinition.vala  ItemVisitor.vala  Lock.vala  LockManager.vala  Makefile.am  NamedAccessControlPolicy.vala  NamespaceRegistry.vala  Node.vala  NodeDefinition.vala  NodeDefinitionTemplate.vala  NodeType.vala  NodeTypeDefinition.vala  NodeTypeDefinitionTemplate.vala  NodeTypeManager.vala  NodeTypeTemplate.vala  ObservationManager.vala  Privilege.vala  Property.vala  PropertyDefinition.vala  PropertyDefinitionTemplate.vala  PropertyType.vala  Query.vala  QueryManager.vala  QueryObjectModelFactory.vala  QueryResult.vala  Repository.vala  RepositoryFactory.vala  (+8 more)
